@@ -221,7 +221,6 @@ sub ubic_services {
         }),
 
         sink => Ubic::Multiservice::Simple->new({
-            habitrpg => daemon('habitrpg'),
             pushover  => daemon('pushover'),
             sms       => daemon('sms'),
         }),
